<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="9dp">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/accueil" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/titre"
                android:textColor="#0000FF"
                android:textStyle="bold"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="60dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/txt"
                android:layout_gravity="center_horizontal"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    tools:layout_editor_absoluteX="135dp"
                    tools:layout_editor_absoluteY="109dp"
                    android:src="@drawable/consiel1"
                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:layout_margin="15dp"
                    android:text="@string/c1"
                    tools:layout_editor_absoluteX="154dp"
                    tools:layout_editor_absoluteY="264dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:src="@drawable/consiel2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="@string/c2"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/consiel3"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="@string/c3"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:src="@drawable/consiel4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="@string/c4"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:src="@drawable/consiel5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="@string/c5"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:src="@drawable/consiel6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="Saluez sans serrer la main, n'embrassez personne."
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="110dp"
                android:layout_height="100dp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="109dp"
                android:src="@drawable/consiel7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="15dp"
                android:text="@string/c6"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="264dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:onClick="envoyer"
                android:text="@string/btn"
                android:textSize="25dp"
                app:backgroundTint="#3F51B5"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="610dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>